# pynavgui

./: pyproject.toml  requirements.txt
src/pynavgui/: __init__.py  action_style.py  ds_style_menu.py  input_f.py  png_ds.py  png_instance.py  png_plot.py  png_plotregion.py  png_prgrid.py  png_prmenu.py  png_viewbox.py  r_plotmenu.py  rds_menu.py
src/pynavgui/utils/ds_utils/: __init__.py  angles.py  copy_utils.py  display_utils.py  filter_utils.py  math_utils.py  measure_utils.py  save_utils.py  step_detection.py
src/pynavgui/utils/func_utils/: call_gui.py  menu_func.py
src/pynavgui/utils/plot_utils/: __init__.py  movie_from_plot.py
